--- a/P1.ipynb
+++ b/P1.ipynb
@@ -497,7 +497,7 @@
     "\n",
     "    return [left_points, right_points]\n",
     "            \n",
-    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, vertices, left_past=-1, right_past=-1):\n",
+    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, vertices, left_past, right_past):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
     "        \n",
@@ -594,7 +594,9 @@
     "\n",
     "import math\n",
     "\n",
-    "def process_image_worker(img_orig):\n",
+    "left_past, right_past = -1, -1\n",
+    "\n",
+    "def process_image(img_orig):\n",
     "    \"\"\"\n",
     "    Implements the processing steps for the image. The steps are\n",
     "    implemented using the helper functions defined above\n",
@@ -622,7 +624,7 @@
     "    max_line_gap = 5    # maximum gap in pixels between connectable line segments\n",
     "    \n",
     "    # Get Hough lines \n",
-    "    img_hough = hough_lines(img_roi, rho, theta, threshold, min_line_len, max_line_gap, vertices)\n",
+    "    img_hough = hough_lines(img_roi, rho, theta, threshold, min_line_len, max_line_gap, vertices, left_past, right_past)\n",
     "    \n",
     "    # Add the Hough lines to the original image for display purposes\n",
     "    img_w = weighted_img(img_hough, img_orig)\n",
@@ -631,7 +633,7 @@
     "\n",
     "def pipeline(img_file_path):\n",
     "    img_orig  = mpimg.imread(in_img_path)\n",
-    "    img_final = process_image_worker(img_orig)\n",
+    "    img_final = process_image(img_orig)\n",
     "    return img_final\n",
     "    \n",
     "for in_img in os.listdir(\"test_images/\"):\n",
@@ -692,41 +694,7 @@
    "source": [
     "from collections import deque\n",
     "left_past  = deque([])\n",
-    "right_past = deque([])\n",
-    "def process_image(img_orig):\n",
-    "    \"\"\"\n",
-    "    Implements the processing steps for the image. The steps are\n",
-    "    implemented using the helper functions defined above\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Convert to grayscale\n",
-    "    img_gray = grayscale(img_orig)\n",
-    "    \n",
-    "    # Apply Gaussian blur before looking for edges\n",
-    "    img_blur = gaussian_blur(img_gray, 5)\n",
-    "    \n",
-    "    # Get Canny edges\n",
-    "    img_canny = canny(img_blur, 50, 150)\n",
-    "    \n",
-    "    # Define vertices for the region of interest, and filter out \n",
-    "    # the edges with respect to that region\n",
-    "    vertices = np.array([[(150,540),(460, 320), (500, 320), (900,540)]], dtype=np.int32)\n",
-    "    img_roi = region_of_interest(img_canny, vertices)\n",
-    "    \n",
-    "    # Define parameters for the Hough transform \n",
-    "    rho = 2             # distance resolution in pixels of the Hough grid\n",
-    "    theta = 1*np.pi/180 # angular resolution in radians of the Hough grid\n",
-    "    threshold = 5       # minimum number of votes (intersections in Hough grid cell)\n",
-    "    min_line_len = 10   # minimum number of pixels making up a line\n",
-    "    max_line_gap = 5    # maximum gap in pixels between connectable line segments\n",
-    "    \n",
-    "    # Get Hough lines \n",
-    "    img_hough = hough_lines(img_roi, rho, theta, threshold, min_line_len, max_line_gap, vertices, left_past, right_past)\n",
-    "    \n",
-    "    # Add the Hough lines to the original image for display purposes\n",
-    "    img_w = weighted_img(img_hough, img_orig)\n",
-    "    \n",
-    "    return img_w"
+    "right_past = deque([])"
    ]
   },
   {
